--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ canvas {
   color: #eee;
 }
 
+input[type=checkbox] {
+  margin: 0 0.5rem 0.5rem 0;
+  border: 0;
+}
+
+input[type=text] {
+  margin-bottom: 0.5rem;
+}
+
 input[type=submit] {
   display: block;
   width: 100%;
@@ -41,10 +50,5 @@ input[type=submit] {
   color: #222;
   border: none;
   border-radius: none;
-  margin: 0 auto;
-}
-
-input[type=checkbox] {
-  margin: 0 0.5rem 0.5rem 0;
-  border: 0;
+  margin: 1rem 0 1rem;
 }
