--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ input[type=text] {
   margin-bottom: 0.5rem;
 }
 
+select {
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
+
 input[type=submit] {
   display: block;
   width: 100%;
