--- a/style.css
+++ b/style.css
@@ -27,9 +27,40 @@ canvas {
   left: 0;
   z-index: 10;
   padding: 1rem;
-  height: 100vh;
+  /*height: 100vh;*/
+  width: 200px;
   background-color: rgba(0,0,0,0.2);
   color: #eee;
+}
+
+#console-wrapper {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-color: rgba(0,0,0,0.5);
+  box-sizing: border-box ;
+  overflow: hidden;
+}
+
+#console {
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  bottom: 0;
+  padding: 0.5rem;
+}
+
+.console-msg {
+}
+
+.console-msg:before {
+  content: "> " ;
+}
+
+.console-data {
+  color: lime;
+  text-align: right ;
+  margin: 0;
 }
 
 input[type=checkbox] {
@@ -39,6 +70,7 @@ input[type=checkbox] {
 
 input[type=text] {
   margin-bottom: 0.5rem;
+  width: 100%;
 }
 
 select {
