--- a/style.css
+++ b/style.css
@@ -15,10 +15,14 @@ body {
 }
 
 canvas {
-  /*border: 1px solid black;*/
   background-color:#ccc;
   z-index: 0;
   transform: translateZ(0);
+}
+
+#ctrl {
+  overflow: auto;
+  margin: 0 auto;
 }
 
 .controls {
@@ -26,11 +30,15 @@ canvas {
   top: 0;
   left: 0;
   z-index: 10;
-  padding: 1rem;
-  /*height: 100vh;*/
-  width: 200px;
-  background-color: rgba(0,0,0,0.2);
-  color: #eee;
+  padding: 1rem 1rem 220px;
+  max-width: 200px;
+  background-color: rgba(0,0,0,0.3);
+  color: #ccc;
+  overflow: auto;
+}
+
+#option-display {
+  overflow: auto;
 }
 
 #console-wrapper {
@@ -40,6 +48,7 @@ canvas {
   background-color: rgba(0,0,0,0.5);
   box-sizing: border-box ;
   overflow: hidden;
+  border: 1px dotted #333;
 }
 
 #console {
@@ -51,31 +60,39 @@ canvas {
 }
 
 .console-msg {
-}
-
-.console-msg:before {
-  content: "> " ;
+  float: left;
+  clear: both;
 }
 
 .console-data {
-  color: lime;
-  text-align: right ;
+  color: #fff;
+  float: right;
   margin: 0;
 }
 
-input[type=checkbox] {
-  margin: 0 0.5rem 0.5rem 0;
-  border: 0;
+.control-input {
+  margin: 0.5rem 0;
+  padding: 0.2rem;
+  float: right;
+  box-sizing: border-box;
 }
 
-input[type=text] {
-  margin-bottom: 0.5rem;
-  width: 100%;
+.control-input.label {
+  margin-right: 0.5rem;
+  text-shadow: 1px 1px 1px #000;
 }
 
-select {
-  width: 100%;
-  margin-bottom: 0.5rem;
+.control-input.field {
+  clear: both;
+  width: 40%;
+  color: #ccc;
+  border: 1px dotted #333;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.control-input.field:focus {
+  outline: 1px dotted #555;
+  color: #eee;
 }
 
 input[type=submit] {
@@ -84,9 +101,20 @@ input[type=submit] {
   text-transform: uppercase;
   font-family: inherit;
   padding: 0.5rem;
-  background-color: #eee;
-  color: #222;
-  border: none;
   border-radius: none;
-  margin: 1rem 0 1rem;
+  margin: 1rem 0;
+  color: #ccc;
+  border: 1px dotted #333;
+  padding: 0.3rem 0.5rem;
+  box-sizing: border-box;
+  background-color: rgba(0,0,0,0.5);
+}
+
+input[type=submit]:active {
+  background-color: #222;
+}
+
+input[type=submit]:focus,
+input[type=submit]:active {
+  outline: 1px dotted #555;
 }
