--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 canvas {
-  background-color:#ccc;
+  background-color:#000;
   z-index: 0;
   transform: translateZ(0);
 }
@@ -97,20 +97,23 @@ canvas {
   color: #eee;
 }
 
-.control-input.beta {
+.control-input.dev-status {
   position: relative;
   left: -0.5rem;
-  /*bottom: -0.2rem;*/
-  /*text-transform: uppercase;*/
   font-size: 0.8rem;
   font-weight: bold;
   text-shadow: 1px 1px 2px #000;
-  background-color: #700;
   border-radius: 3rem;
   padding: 0.2rem 0.5rem;
-  /*width: 2rem;*/
   text-align: center;
-  /*transform: rotate(-45deg);*/
+}
+
+.control-input.dev-status.alpha {
+  background-color: #720;
+}
+
+.control-input.dev-status.beta {
+  background-color: #073;
 }
 
 input[type=submit] {
